# django-settings-file

./: .travis.yml  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
django_settings_file/: __init__.py  settings.py  settings_py2.py  settings_py3.py
requirements/: py310-django32.txt  py310-django40.txt  py310-django41.txt  py311-django41.txt  py35-django111.txt  py35-django20.txt  py35-django21.txt  py35-django22.txt  py36-django111.txt  py36-django20.txt  py36-django21.txt  py36-django22.txt  py36-django30.txt  py36-django31.txt  py36-django32.txt  py37-django111.txt  py37-django20.txt  py37-django21.txt  py37-django22.txt  py37-django30.txt  py37-django31.txt  py37-django32.txt  py38-django22.txt  py38-django30.txt  py38-django31.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py39-django22.txt  py39-django30.txt  py39-django31.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  requirements.in
src/django_settings_file/: __init__.py  settings.py
tests/: test_it.py
tests/example_project/: manage.py
tests/example_project/example_project/: settings.py  urls.py
tests/example_project/example_project/testapp/management/commands/: example_command.py
