[flake8]
max-line-length = 120

[isort]
include_trailing_comma = True
known_first_party = django_settings_file
known_third_party = django
line_length = 120
multi_line_output = 5
not_skip = __init__.py

[metadata]
license_file = LICENSE

[tool:multilint]
paths = django_settings_file
        setup.py
        tests
